Solved issue with 'colspan' behaviour on mobile devices

--- a/css/web.css
+++ b/css/web.css
@@ -19,12 +19,12 @@ th {
 table.responsive-table td.session-time {
     text-align: center;
     vertical-align: top;
-    padding-bottom: 60px;
+    padding-bottom: 43px;
 }
 
 table.responsive-table td {
     font-size: 16px;
-    height: 51px;
+    height: 58px;
 }
 
 i.tiny{
@@ -155,6 +155,15 @@ table.striped > tbody > tr > td{
     color: #ffffff;
 }
 
+.hidden {
+    display: block;
+}
+
+.absolute {
+    position: absolute;
+    top: 15px;
+}
+
 @media (min-width: 993px) {
     .session {
         padding: 10px;
@@ -162,6 +171,21 @@ table.striped > tbody > tr > td{
 	position: absolute;
 	width: calc(100% - 10px);
 	top: 5px;
+    }
+
+    .hidden {
+        display: none;
+    }
+
+    table.responsive-table td.session-time {
+        text-align: center;
+        vertical-align: top;
+        padding-bottom: 100px;
+    }
+
+    table.responsive-table td {
+        font-size: 16px;
+        height: 51px;
     }
 
 }
